# baazarbot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.py
baazarbot/: settings.py
baazarbot/application/crawlers/: base.py  dispatcher.py  ecoiran_crawler.py
baazarbot/application/dataset/: constants.py  generation.py  utils.py
baazarbot/application/networks/: embeddings.py
baazarbot/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
baazarbot/application/preprocessing/operations/: __init__.py  chunking.py  cleaning.py
baazarbot/application/utils/: __init__.py  misc.py
baazarbot/crawlers/: dispatcher.py
baazarbot/domain/: chunks.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunks.py  exceptions.py  prompt.py  types.py
baazarbot/domain/base/: __init__.py  vector.py
baazarbot/infrastructure/db/: mongo.py  qdrant.py
configs/: digital_data_etl.yaml  generate_instruct_datasets.yaml
pipelines/: __init__.py  digital_data_etl.py  feature-engineering.py  feature_engineering.py  generate_datasets.py
steps/: __init__.py  crawl_links.py
steps/feature-engineering/: __init__.py
steps/feature_engineering/: __init__.py  clean.py  get_data_warehouse.py  load_vectordb.py  rag.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  push_to_huggingface.py  query_fe_store.py
tools/: run.py
