[tool.poetry]
name = "baazarbot"
version = "0.1.0"
description = ""
authors = ["Sassan Owssia <sassan.owssia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version="0.71.0", extras=["server"] } 
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
