[tool.poetry]
name = "baazarbot"
version = "0.1.0"
description = ""
authors = ["Sassan Owssia <sassan.owssia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version="0.71.0", extras=["server"] } 
loguru = "^0.7.3"
click = "^8.1.3"
beanie = "^1.28.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.67.1"
qdrant-client = "^1.12.2"
sentence-transformers = "^3.3.1"
numpy = "^1.26.4"
langchain = "^0.3.13"
bitsandbytes = "^0.45.0"
scikit-learn = "^1.6.0"
langchain-huggingface = "^0.1.2"
accelerate = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
jupyterlab = "^4.3.4"
vllm = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "tools.run:main"